# opengl-renderers

./: .gitignore  CMakeLists.txt  Readme.md  vcpkg.json
assets/shaders/: MeshBasic.frag.glsl  MeshBasic.vert.glsl  MeshStandard.frag.glsl  MeshStandard.vert.glsl  background.frag.glsl  background.vert.glsl  bbox.frag.glsl  bbox.vert.glsl  default.frag.glsl  default.vert.glsl  deferred-g-pass.frag.glsl  deferred-g-pass.vert.glsl  deferred-shading.frag.glsl  deferred-shading.vert.glsl  depth-debug.frag.glsl  depth-debug.vert.glsl  depth.vert.glsl  forward.frag.glsl  forward.vert.glsl  light-accumulation.frag.glsl  lightculling.comp.glsl  pbr.frag.glsl  pbr.vert.glsl  shadow.frag.glsl  shadow.vert.glsl
assets/shadow-scene/: shadowscene.gltf
src/: camera.h  controls.h  deferred.h  forward.h  forwardplus.h  main.cpp  resource.cpp  resource.h  shape.h
src/utils/: calc_tangent.cpp  calc_tangent.h
